update-nav-footer

--- a/src/app/layouts/footer/footer.component.html
+++ b/src/app/layouts/footer/footer.component.html
@@ -1,1 +1,54 @@
-<p>footer works!</p>
+<footer class="text-center text-lg-start bg-white">
+    <section class="p-4 border-top">
+        <div>
+            <span class="me-2">Administradores</span>
+            <a href="" class="me-4">
+                <i class="fa-solid fa-gear"></i>
+            </a>
+        </div>
+    </section>
+
+    <section>
+        <div class="container text-center text-md-start mt-5">
+            <div class="row mt-3">
+                <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+                    <h6 class="text-uppercase fw-semibold mb-4">
+                        <i class="fa-solid fa-car me-2"></i>
+                        Bienvenido a AutoAdvisor Plus
+                    </h6>
+                    <p>
+                        Tu destino para encontrar el automóvil perfecto! En nuestra página web, te ofrecemos una experiencia completa para ayudarte a comprar o vender tu automóvil de manera fácil y conveniente.
+                    </p>
+                </div>
+
+                <div class="col-md-2 col-lg-2 col-xl-1 mx-auto mb-4">            
+                    <h6 class="text-uppercase fw-bold mb-3">Acciones</h6>
+                    <p><a href="#!" class="text-reset">Autos</a></p>
+                    <p><a href="#!" class="text-reset">Asesores</a></p>
+                    <p><a href="#!" class="text-reset">Usados</a></p>
+                    <p><a href="#!" class="text-reset">Nosotros</a></p>
+                </div>
+
+                <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+                    <h6 class="text-uppercase fw-semibold mb-4">
+                        Importante
+                    </h6>
+                    <p>
+                        Todos los automóviles de segunda mano son evaluados minuciosamente por nuestros asesores especializados. Si un vehículo cumple con nuestros estándares de calidad, recibirás una confirmación por correo electrónico.
+                    </p>
+                </div> 
+          
+                <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+                    <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
+                    <p><i class="fas fa-home me-3"></i> Guayaquil, Urdesa central, EC</p>
+                    <p><i class="fas fa-envelope me-3"></i> AutoAdvisor@plus.ec</p>
+                    <p><i class="fas fa-phone me-3"></i> +593 093 044 2334</p>
+                    <p><i class="fa-solid fa-calendar-days me-3"></i> 24/7</p>
+                </div>
+            </div>
+        </div>
+    </section>
+        <div class="text-center p-3">
+        <span> © 2023 DAWA: Grupo 7</span>
+    </div>
+</footer>
