--- a/src/app/layouts/footer/footer.component.html
+++ b/src/app/layouts/footer/footer.component.html
@@ -2,7 +2,7 @@
     <section class="p-4 border-top">
         <div>
             <span class="me-2">Administradores</span>
-            <a href="" class="me-4">
+            <a class="me-4" routerLink="/login">
                 <i class="fa-solid fa-gear"></i>
             </a>
         </div>
