--- a/src/app/layouts/footer/footer.component.html
+++ b/src/app/layouts/footer/footer.component.html
@@ -10,7 +10,7 @@
 
     <section>
         <div class="container text-center text-md-start mt-5">
-            <div class="row mt-3">
+            <div class="row">
                 <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
                     <h6 class="text-uppercase fw-semibold mb-4">
                         <i class="fa-solid fa-car me-2"></i>
@@ -48,7 +48,7 @@
             </div>
         </div>
     </section>
-        <div class="text-center p-3">
+    <div class="text-center p-2 pt-0">
         <span> © 2023 DAWA: Grupo 7</span>
     </div>
 </footer>
