--- a/src/styles.css
+++ b/src/styles.css
@@ -14,7 +14,7 @@ body {
 
 :root{
     --White: #FFFFFF;
-    --LightBlue: #4C98E9;
+    --LightBlue: #543FFF;
     --MidnightBlue: #0F1219;
     --Gray: #555E69;
     --Black: #000000;
