--- a/src/app/modules/authentication/login/login.component.html
+++ b/src/app/modules/authentication/login/login.component.html
@@ -1,1 +1,29 @@
-<p>login works!</p>
+<div class="container">
+    <div class="container-login">
+        <div class="container-logo">
+            <p>AutoAdvisor +</p>
+        </div>
+        <form class="container-form">
+            <label for="inputPassword5" class="form-label">Usuario</label>
+            <input 
+                type="text" 
+                id="inputUser" 
+                class="form-control"
+                aria-labelledby="passwordHelpBlock"
+                placeholder="Usuario"
+            />
+
+            <label for="inputPassword5" class="form-label">Contraseña</label>
+            <input 
+                type="password" 
+                id="inputPassword5" 
+                class="form-control" 
+                aria-labelledby="passwordHelpBlock"  
+                placeholder="Contraseña"
+            />
+            
+            <button routerLink="/admin" type="button" class="btn">Iniciar Sesión</button>
+        </form>
+    </div>
+   
+</div>
