--- a/src/app/modules/dashboard/components/citas/edit-delete-citas/edit-delete-citas.component.html
+++ b/src/app/modules/dashboard/components/citas/edit-delete-citas/edit-delete-citas.component.html
@@ -1,17 +1,12 @@
-<span class="h5 text-uppercase">Confirmar eliminación</span> <hr class="opacity-50">
+<span class="h5 text-uppercase">{{title}}</span> <hr class="opacity-50">
 <mat-dialog-content  *ngIf="bandera === 'actualizar'" class="pb-0">
     <form [formGroup]="form" (ngSubmit)="submit()" class="mt-2">    
         <div class="row">
+            <mat-progress-bar color="warn" mode="indeterminate" *ngIf="loading"></mat-progress-bar>
             <mat-form-field appearance="outline">
                 <mat-label> Hora </mat-label>
                 <mat-select formControlName="hora">
-                    <mat-option [value]="'09:00'"> 09:00 A.M </mat-option>
-                    <mat-option [value]="'10:00'"> 10:00 A.M </mat-option>
-                    <mat-option [value]="'11:00'"> 11:00 A.M </mat-option>
-                    <mat-option [value]="'13:00'"> 13:00 P.M </mat-option>
-                    <mat-option [value]="'14:00'"> 14:00 P.M </mat-option>
-                    <mat-option [value]="'15:00'"> 15:00 P.M </mat-option>
-                    <mat-option [value]="'16:00'"> 16:00 P.M </mat-option>
+                    <mat-option *ngFor="let item of horarios" [value]="item.id_Horario"> {{ item.hora }}</mat-option>
                 </mat-select>
                 <mat-icon matPrefix>supervised_user_circle</mat-icon>
             </mat-form-field>
@@ -33,7 +28,7 @@
 
 <mat-dialog-content *ngIf="bandera === 'eliminar'">
     <p class="mt-2"> ¿Estás seguro de que deseas eliminar esta cita? </p>
-    <p> <strong>Nombre:</strong> {{ cita.nombre }} </p>
+    <p> <strong>Nombre:</strong> {{ cita.nombresCliente }} </p>
     <p> <strong>Fecha:</strong> {{ cita.fecha | date:"Y-M-d" }} </p>
     <p class="mb-4"> <strong>Hora:</strong> {{ cita.hora }} </p>
     <hr class="opacity-50">
