--- a/src/app/modules/dashboard/components/citas/info-citas/info-citas.component.html
+++ b/src/app/modules/dashboard/components/citas/info-citas/info-citas.component.html
@@ -1,16 +1,16 @@
 <div class="card border-success m-0" style="width: 20rem;">
     <div class="card-header bg-transparent border-success">
-        <span class="h5">{{ cita.nombre }}</span>
+        <span class="h5">{{ cita.nombresCliente }}</span>
     </div>
     <div class="card-body">
         <table>
             <tr>
               <td><strong>Auto:</strong></td>
-              <td style="padding-left: 10px;">{{ cita.auto.nombre }}</td>
+              <td style="padding-left: 10px;">{{ cita.auto }}</td>
             </tr>
             <tr>
               <td><strong>Nombre:</strong></td>
-              <td style="padding-left: 10px;">{{ cita.nombre }}</td>
+              <td style="padding-left: 10px;">{{ cita.nombresCliente }}</td>
             </tr>
             <tr>
               <td><strong>Teléfono:</strong></td>
@@ -22,7 +22,7 @@
             </tr>
             <tr>
               <td><strong>Asesor:</strong></td>
-              <td style="padding-left: 10px;">{{ cita.asesor.nombre }}</td>
+              <td style="padding-left: 10px;">{{ cita.nombresAsesor }}</td>
             </tr>
           </table>
     </div>
