--- a/src/app/modules/dashboard/components/used-cars/respuesta-used/respuesta-used.component.html
+++ b/src/app/modules/dashboard/components/used-cars/respuesta-used/respuesta-used.component.html
@@ -2,11 +2,11 @@
 <div class="card">
     <img src="../../../../../../assets/img/useds/{{usado.imagen}}.jpg" class="card-img-top w-50 rounded-3 shadow" alt="Car"/>
     <div class="card-body">
-      <span class="h5 card-title">{{usado.auto}} del {{usado.anio}}</span>
+      <span class="h5 card-title">{{usado.nombre}} del {{usado.anio}}</span>
       <p class="card-text mt-3">
         <strong>USD {{usado.precio}}</strong><br>
         {{usado.descripcion}} <br> 
-        Propietario {{usado.nombre}}, Teléfono {{usado.telefono}}, Correo Electrónico {{usado.correo}}
+        Propietario {{usado.nombreVendedor}}, Teléfono {{usado.telefono}}, Correo Electrónico {{usado.correo}}
       </p>
     </div>
     <div *ngIf="title !== ''"  class="card-footer d-flex align-items-center justify-content-end  bg-transparent border-0 mt-2">
