--- a/src/app/layouts/card-car/card-car.component.html
+++ b/src/app/layouts/card-car/card-car.component.html
@@ -15,6 +15,8 @@
             </div>
         </div>
         <div class="col-md-10">
+            <mat-progress-bar class="mb-3" color="warn" mode="indeterminate" *ngIf="loading"></mat-progress-bar>
+
             <mat-tab-group (selectedTabChange)="onTabSelected($event)">
                 <mat-tab label="All"> 
                     <div class="container-horizontal">
@@ -40,7 +42,7 @@
                                     
                                     <div class="product-properties">
                                         <span class="product-color">
-                                            <button class="btn btn-outline-success ms-3 mt-3" [routerLink]="['/autos',items.id]">
+                                            <button class="btn btn-outline-success ms-3 mt-3" [routerLink]="['/autos',items.id_Auto]">
                                                 Me Interesa
                                             </button>
                                         </span>
@@ -78,7 +80,7 @@
                                     
                                     <div class="product-properties">
                                         <span class="product-color">
-                                            <button class="btn btn-outline-success ms-3 mt-3" [routerLink]="['/autos',items.id]">
+                                            <button class="btn btn-outline-success ms-3 mt-3" [routerLink]="['/autos',items.id_Auto]">
                                                 Consultar
                                             </button>
                                         </span>
@@ -116,7 +118,7 @@
                                     
                                     <div class="product-properties">
                                         <span class="product-color">
-                                            <button class="btn btn-outline-success ms-3 mt-3" [routerLink]="['/autos',items.id]">
+                                            <button class="btn btn-outline-success ms-3 mt-3" [routerLink]="['/autos',items.id_Auto]">
                                                 Consultar
                                             </button>
                                         </span>
@@ -154,7 +156,7 @@
                                     
                                     <div class="product-properties">
                                         <span class="product-color">
-                                            <button class="btn btn-outline-success ms-3 mt-3" [routerLink]="['/autos',items.id]">
+                                            <button class="btn btn-outline-success ms-3 mt-3" [routerLink]="['/autos',items.id_Auto]">
                                                 Consultar
                                             </button>
                                         </span>
