--- a/src/app/modules/dashboard/components/citas/setting-citas/setting-citas.component.html
+++ b/src/app/modules/dashboard/components/citas/setting-citas/setting-citas.component.html
@@ -4,6 +4,9 @@
             <span class="h3 title w-100">Gestionar Citas</span>
         </div>
         <div class="card-content">
+
+            <mat-progress-bar color="warn" mode="indeterminate" *ngIf="loading"></mat-progress-bar>
+
             <div class="row row-cols-1">
                 <div class="col">
                     <mat-form-field appearance="outline" class="w-100">
@@ -17,7 +20,7 @@
 
                     <ng-container matColumnDef="nombre"> 
                         <th mat-header-cell *matHeaderCellDef mat-sort-header class="w-25"> Nombre </th>
-                        <td mat-cell *matCellDef="let row"> {{row.nombre}} </td>
+                        <td mat-cell *matCellDef="let row"> {{row.nombresCliente}} </td>
                     </ng-container>
 
                     <ng-container matColumnDef="correo"> 
@@ -32,7 +35,7 @@
 
                     <ng-container matColumnDef="asesor">
                       <th mat-header-cell *matHeaderCellDef mat-sort-header> Asesor </th>
-                      <td mat-cell *matCellDef="let row"> {{row.asesor.nombre}} </td>
+                      <td mat-cell *matCellDef="let row"> {{row.nombresAsesor}} </td>
                   </ng-container>                          
 
                     <ng-container matColumnDef="accion">
