--- a/src/app/modules/dashboard/components/used-cars/setting-used-cars/setting-used-cars.component.html
+++ b/src/app/modules/dashboard/components/used-cars/setting-used-cars/setting-used-cars.component.html
@@ -4,6 +4,7 @@
       <span class="h3 title w-100">Gestionar Carros Usados</span>
     </div>
     <div class="card-content">
+      <mat-progress-bar color="warn" mode="indeterminate" *ngIf="loading"></mat-progress-bar>
       <div class="row">
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>Filtrar</mat-label>
@@ -15,7 +16,7 @@
 
           <ng-container matColumnDef="auto"> 
             <th mat-header-cell *matHeaderCellDef mat-sort-header class="w-25"> Auto </th>
-            <td mat-cell *matCellDef="let row"> {{row.auto}} </td>
+            <td mat-cell *matCellDef="let row"> {{row.nombre}} </td>
           </ng-container>
 
           <ng-container matColumnDef="año"> 
@@ -25,7 +26,7 @@
           
           <ng-container matColumnDef="usuario">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Dueño </th>
-            <td mat-cell *matCellDef="let row"> {{row.nombre}} </td>
+            <td mat-cell *matCellDef="let row"> {{row.nombreVendedor}} </td>
           </ng-container>
 
           <ng-container matColumnDef="telefono">
@@ -36,9 +37,9 @@
           <ng-container matColumnDef="estado">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado </th>
             <td mat-cell *matCellDef="let row">
-              <span *ngIf="row.estado == 0" class="badge text-bg-info rounded-pill d-inline fw-normal px-2 py-2">Esperando</span>
-              <span *ngIf="row.estado == 1" class="badge text-bg-success rounded-pill d-inline fw-normal px-2 py-2">Aceptado</span>
-              <span *ngIf="row.estado == 2" class="badge text-bg-danger rounded-pill d-inline fw-normal px-2 py-2">Rechazado</span>
+              <span *ngIf="row.estado === 'esperando'" class="badge text-bg-info rounded-pill d-inline fw-normal px-2 py-2">Esperando</span>
+              <span *ngIf="row.estado === 'aceptado'" class="badge text-bg-success rounded-pill d-inline fw-normal px-2 py-2">Aceptado</span>
+              <span *ngIf="row.estado === 'rechazado'" class="badge text-bg-danger rounded-pill d-inline fw-normal px-2 py-2">Rechazado</span>
             </td>
           </ng-container>
 
@@ -49,10 +50,10 @@
                 <button class="btn btn-accion btn-outline-primary" (click)="openInfo(row, 'informacion')">
                   <mat-icon>visibility</mat-icon>
                 </button>
-                <button *ngIf="row.estado == 0" class="btn btn-outline-success btn-accion" (click)="openAceptar(row, 'aceptar')">
+                <button *ngIf="row.estado === 'esperando'" class="btn btn-outline-success btn-accion" (click)="openAceptar(row, 'aceptar')">
                   <mat-icon>check_circle</mat-icon>
                 </button>
-                <button *ngIf="row.estado == 0" class="btn btn-outline-danger btn-accion" (click)="openRechazar(row, 'rechazar')">
+                <button *ngIf="row.estado === 'esperando'" class="btn btn-outline-danger btn-accion" (click)="openRechazar(row, 'rechazar')">
                   <mat-icon>cancel</mat-icon>
                 </button>
               </div>
