--- a/src/app/modules/authentication/login/login.component.html
+++ b/src/app/modules/authentication/login/login.component.html
@@ -13,7 +13,7 @@
                         <div class=" mb-1 mt-4">
                             <mat-form-field appearance="outline" class="w-75">
                                 <mat-label>Usuario</mat-label>
-                                <input type="text" matInput autocomplete="off" formControlName="usuario">
+                                <input type="text" matInput autocomplete="off" formControlName="username">
                                 <mat-icon matPrefix>person</mat-icon>
                             </mat-form-field>
                         </div>
@@ -27,10 +27,11 @@
                         <div class="pt-4 mb-4 mt-0">
                             <button class="btn btn-outline-success w-75" type="submit">
                                 <mat-icon>send</mat-icon>
+                                <mat-progress-bar color="primary" mode="indeterminate" *ngIf="bandera"></mat-progress-bar>
                             </button>
                         </div>  
                     </form>
-
+                    
                     <div class="container d-flex align-items-end mt-5">
                         <mat-icon class="me-2">warning</mat-icon>
                         Acceso restringido a personal autorizado
