--- a/src/app/modules/dashboard/components/administrators/administrators.component.html
+++ b/src/app/modules/dashboard/components/administrators/administrators.component.html
@@ -1,1 +1,147 @@
-<p>administrators works!</p>
+<div class="container-fluid w-auto d-flex justify-content-center align-items-start p-3 shadow m-4 rounded-4 bg-white">
+    <div class="container w-100">
+        <div class="w-100 text-center card border-0 shadow-sm mb-3">
+            <span class="h3 title w-100">Gestionar Administradores</span>
+        </div>
+        <div class="row pt-2">
+            <div class="col-3">
+
+                <div class="row row-cols-2">
+                    <div class="col-3 "></div>
+                        <div class="col w-100">
+                            <div class="">
+                                <div class="card-title w-100 text-center">
+                                    <span class="h5 text-uppercase">Datos</span>
+                                </div>     
+                                <form [formGroup]="form" (ngSubmit)="submit()">
+                                    <div class="row row-form mt-3">
+                                        <div class="col">
+                                            <mat-form-field appearance="outline">
+                                                <mat-label> Cédula </mat-label>
+                                                <input type="text" matInput autocomplete="off" formControlName="cedula">
+                                                <mat-icon matPrefix>fingerprint</mat-icon>
+                                            </mat-form-field>
+                                        </div>
+                                        <div class="col">
+                                            <mat-form-field appearance="outline">
+                                                <mat-label> Nombres </mat-label>
+                                                <input type="text" matInput autocomplete="off" formControlName="nombres">
+                                                <mat-icon matPrefix>edit</mat-icon>
+                                            </mat-form-field>
+                                        </div>
+                                        <div class="col">
+                                            <mat-form-field appearance="outline">
+                                                <mat-label> Username </mat-label>
+                                                <input type="text" matInput autocomplete="off" formControlName="username">
+                                                <mat-icon matPrefix>assignment_ind</mat-icon>
+                                            </mat-form-field>
+                                        </div>
+                                        <div class="col">
+                                            <mat-form-field appearance="outline">
+                                                <mat-label> Password </mat-label>
+                                                <input type="password" matInput autocomplete="off" formControlName="password">
+                                                <mat-icon matPrefix>lock</mat-icon>
+                                            </mat-form-field>
+                                        </div>
+                                        <div class="col">
+                                            <mat-form-field appearance="outline">
+                                                <mat-label> Roles </mat-label>
+                                                <mat-select formControlName="rolId">
+                                                    <mat-option *ngFor="let item of roles" [value]="item.id"> {{ item.modulo }}</mat-option>
+                                                </mat-select>
+                                                <mat-icon matPrefix>supervised_user_circle</mat-icon>
+                                            </mat-form-field>
+                                        </div>
+                                        <div class="col">
+                                            <button class="btn btn-sm btn-success" type="submit">
+                                                <mat-icon>send</mat-icon>
+                                            </button>
+                                        </div>
+                                    </div>         
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card-content">
+                    <mat-progress-bar color="warn" mode="indeterminate" *ngIf="loading"></mat-progress-bar>
+        
+                    <div class="row row-cols-lg-1">
+                        <div class="col">
+                            <mat-form-field appearance="outline" class="w-100">
+                              <mat-label>Filtrar</mat-label>
+                              <input matInput (keyup)="applyFilter($event)" placeholder="Buscar..." #input autocomplete="off">
+                            </mat-form-field>
+                        </div>
+                    </div>
+                    <div class="container-table">
+                        <table mat-table [dataSource]="dataSource" matSort>
+        
+                            <ng-container matColumnDef="cedula"> 
+                                <th mat-header-cell *matHeaderCellDef mat-sort-header> Cédula </th>
+                                <td mat-cell *matCellDef="let row"> {{row.cedula}} </td>
+                            </ng-container>
+        
+                            <ng-container matColumnDef="nombres"> 
+                              <th mat-header-cell *matHeaderCellDef mat-sort-header> Nombres </th>
+                              <td mat-cell *matCellDef="let row"> {{row.nombres}} </td>
+                            </ng-container>
+                        
+                            <ng-container matColumnDef="username">
+                              <th mat-header-cell *matHeaderCellDef mat-sort-header> Username </th>
+                              <td mat-cell *matCellDef="let row"> {{row.username}} </td>
+                            </ng-container>
+                  
+                            <ng-container matColumnDef="modulo">
+                                <th mat-header-cell *matHeaderCellDef mat-sort-header> Módulo </th>
+                                <td mat-cell *matCellDef="let row"> {{row.modulo}} </td>
+                            </ng-container>      
+        
+                            <ng-container matColumnDef="accion">
+                              <th mat-header-cell *matHeaderCellDef class="text-center"> Acción </th>
+                              <td mat-cell *matCellDef="let row">
+                                <div class="container d-flex justify-content-evenly p-0">
+                                    <button *ngIf="row.estado == true" class="btn btn-outline-danger btn-accion" data-bs-toggle="modal" data-bs-target="#staticBackdrop"  (click)="seterarId(row.id)">
+                                        <mat-icon>delete_forever</mat-icon>
+                                    </button>
+                                </div>
+                              </td>
+                            </ng-container>
+                            
+                            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                  
+                            <tr class="mat-row" *matNoDataRow>
+                              <td class="mat-cell" colspan="4">No hay datos que coincidan con el filtro "{{input.value}}"</td>
+                            </tr>
+                          </table>
+                  
+                          <mat-paginator [pageSizeOptions]="[5]"></mat-paginator>
+                    </div>     
+                </div>
+                
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="staticBackdrop" data-bs-backdrop="false" data-bs-keyboard="false" tabindex="-1" #myModal>
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title fs-5" id="staticBackdropLabel">
+                    <span>Confirmar eliminación</span>
+                </h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+            </div>
+            <div class="modal-body">
+                <span>Esta acción es irreversible.</span>
+            </div>
+            <div class="modal-footer">
+                <button type="button" id="dismissButton" class="btn btn-danger" data-bs-dismiss="modal">Cancelar</button>
+                <button type="button" class="btn btn-success" (click)="eliminar()">Eliminar</button>
+            </div>
+        </div>
+    </div>
+</div>
